Add priceInMargin