@@ -1,33 +1,32 @@
 package unq.cryptoexchange.services.impl;
 
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import unq.cryptoexchange.dto.request.ExchangeAttemptDto;
 import unq.cryptoexchange.dto.request.ItemExAttemptDto;
+import unq.cryptoexchange.exceptions.InvalidException;
+import unq.cryptoexchange.models.CryptoCurrency;
 import unq.cryptoexchange.models.ExchangeAttempt;
 import unq.cryptoexchange.models.Person;
 import unq.cryptoexchange.models.enums.AttemptStatus;
 import unq.cryptoexchange.repository.ExchangeAttemptRepository;
 import unq.cryptoexchange.repository.PersonRepository;
 import unq.cryptoexchange.services.ExchangeAttemptServiceInterface;
-
 import java.util.List;
-
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ExchangeAttemptService implements ExchangeAttemptServiceInterface {
     
     private final ExchangeAttemptRepository exAttemptRepository;
     private final PersonRepository personRepository;
+    private final CryptoPriceService cryptoPriceService;
 
     @Autowired
-    public ExchangeAttemptService(PersonRepository personRepository, ExchangeAttemptRepository exAttemptRepository) {
+    public ExchangeAttemptService(PersonRepository personRepository, ExchangeAttemptRepository exAttemptRepository, CryptoPriceService cryptoPriceService) {
         this.personRepository = personRepository;
         this.exAttemptRepository = exAttemptRepository;
+        this.cryptoPriceService = cryptoPriceService;
     }
 
     @Override
@@ -35,10 +34,14 @@ public class ExchangeAttemptService implements ExchangeAttemptServiceInterface {
 
         Optional<Person> existPerson = personRepository.findById(exAttemptDto.getPersonId());
         if(existPerson.isEmpty()){
-           throw new NullPointerException("This id = " + exAttemptDto.getPersonId() + " does not exist");
+           throw new NullPointerException("This id: " + exAttemptDto.getPersonId() + " does not exist");
         }
 
-        //TODO: Agregar condicion para margen de precio cuando este terminado el punto 3
+        CryptoCurrency priceCrypto = cryptoPriceService.getPrice(exAttemptDto.getCrypto().toString());
+        
+        if(!priceInMargin(exAttemptDto.getPrice(), priceCrypto.getPrice())){
+            throw new InvalidException("This price: " + exAttemptDto.getPrice() + " is out of range ");
+        }
 
         Person person = existPerson.get();
 
@@ -52,6 +55,16 @@ public class ExchangeAttemptService implements ExchangeAttemptServiceInterface {
         return exAttemptRepository.save(exAttempt);
         
     } 
+
+    private boolean priceInMargin(Float userPrice, Float cryptoPrice){
+
+        float marginPrice = cryptoPrice*0.05f;
+
+        float maxPrice = cryptoPrice + marginPrice;
+        float minPrice = cryptoPrice - marginPrice;
+
+        return userPrice >= minPrice && userPrice <= maxPrice;
+    }
 
     @Override
     public List<ItemExAttemptDto> getAllExchangeAttempt() {
@@ -74,7 +87,7 @@ public class ExchangeAttemptService implements ExchangeAttemptServiceInterface {
                     //operationsCount,
                     //getUserReputation(attempt.getPersonId())
             );
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     /*
